gen/SeagullParser.java
// Generated from D:/Dev/Seagull/Seagull/Grammar\SeagullParser.g4 by ANTLR 4.7.2


    using System.Collections.Generic;
    
	using Seagull.AST;
	using Seagull.Grammar;
	
	using Seagull.Semantics.Symbols;
	
	using Seagull.AST.Expressions;
	using Seagull.AST.Expressions.Binary;
	using Seagull.AST.Expressions.Literals;
	
	using Seagull.AST.Statements;
	using Seagull.AST.Statements.Definitions;
	
	using Seagull.AST.Types;

import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class SeagullParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.7.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		SHARP=1, VOID=2, INT=3, CHAR=4, DOUBLE=5, STRING=6, STRUCT=7, ENUM=8, 
		DELEGATE=9, TRUE=10, FALSE=11, IF=12, ELSE=13, WHILE=14, FOR=15, NEW=16, 
		DELETE=17, RETURN=18, PRINT=19, READ=20, ASSERT=21, DELAY=22, PUBLIC=23, 
		PRIVATE=24, LOAD=25, IMPORT=26, NAMESPACE=27, USING=28, DOT=29, COMMA=30, 
		COL=31, SEMI_COL=32, ASSIGN=33, STAR=34, SLASH=35, PERCENT=36, ARROW=37, 
		PLUS=38, MINUS=39, NOT=40, AND=41, OR=42, L_BRACKET=43, R_BRACKET=44, 
		L_PAR=45, R_PAR=46, L_CURL=47, R_CURL=48, EQUAL=49, NOT_EQUAL=50, LESS_THAN=51, 
		GREATER_THAN=52, LESS_EQ_THAN=53, GREATER_EQ_THAN=54, ID=55, INT_CONSTANT=56, 
		REAL_CONSTANT=57, CHAR_CONSTANT=58, STRING_CONSTANT=59, BOOLEAN_CONSTANT=60, 
		SL_COMMENT=61, ML_COMMENT=62, BLANKS=63, DIR_DEFINE=64, DIR_IF=65, DIR_ELIF=66, 
		DIR_ELSE=67, DIR_WHITESPACE=68, DIR_ML_COMMENT=69, DIR_NEWLINE=70;
	public static final int
		RULE_program = 0, RULE_load = 1, RULE_type = 2, RULE_functionType = 3, 
		RULE_parameters = 4, RULE_structType = 5, RULE_primitive = 6, RULE_voidType = 7, 
		RULE_protectionLevel = 8, RULE_definition = 9, RULE_namespaceDef = 10, 
		RULE_variableDef = 11, RULE_fuctionDef = 12, RULE_structDef = 13, RULE_delegate = 14, 
		RULE_funcInvocation = 15, RULE_block = 16, RULE_fnBlock = 17, RULE_statement = 18, 
		RULE_readPrint = 19, RULE_expression = 20, RULE_variable = 21, RULE_literal = 22;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "load", "type", "functionType", "parameters", "structType", 
			"primitive", "voidType", "protectionLevel", "definition", "namespaceDef", 
			"variableDef", "fuctionDef", "structDef", "delegate", "funcInvocation", 
			"block", "fnBlock", "statement", "readPrint", "expression", "variable", 
			"literal"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'#'", "'void'", "'int'", "'char'", "'double'", "'string'", "'struct'", 
			"'enum'", "'delegate'", "'true'", "'false'", null, null, "'while'", "'for'", 
			"'new'", "'delete'", "'return'", "'print'", "'read'", "'assert'", "'delay'", 
			"'public'", "'private'", "'load'", "'import'", "'namespace'", "'using'", 
			"'.'", "','", "':'", "';'", "'='", "'*'", "'/'", "'%'", "'->'", "'+'", 
			"'-'", "'!'", "'&&'", "'||'", "'['", "']'", "'('", "')'", "'{'", "'}'", 
			"'=='", "'!='", "'<'", "'>'", "'<='", "'>='", null, null, null, null, 
			null, null, null, null, null, "'define'", null, "'elif'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "SHARP", "VOID", "INT", "CHAR", "DOUBLE", "STRING", "STRUCT", "ENUM", 
			"DELEGATE", "TRUE", "FALSE", "IF", "ELSE", "WHILE", "FOR", "NEW", "DELETE", 
			"RETURN", "PRINT", "READ", "ASSERT", "DELAY", "PUBLIC", "PRIVATE", "LOAD", 
			"IMPORT", "NAMESPACE", "USING", "DOT", "COMMA", "COL", "SEMI_COL", "ASSIGN", 
			"STAR", "SLASH", "PERCENT", "ARROW", "PLUS", "MINUS", "NOT", "AND", "OR", 
			"L_BRACKET", "R_BRACKET", "L_PAR", "R_PAR", "L_CURL", "R_CURL", "EQUAL", 
			"NOT_EQUAL", "LESS_THAN", "GREATER_THAN", "LESS_EQ_THAN", "GREATER_EQ_THAN", 
			"ID", "INT_CONSTANT", "REAL_CONSTANT", "CHAR_CONSTANT", "STRING_CONSTANT", 
			"BOOLEAN_CONSTANT", "SL_COMMENT", "ML_COMMENT", "BLANKS", "DIR_DEFINE", 
			"DIR_IF", "DIR_ELIF", "DIR_ELSE", "DIR_WHITESPACE", "DIR_ML_COMMENT", 
			"DIR_NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SeagullParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SeagullParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class ProgramContext extends ParserRuleContext {
		public Program Ast;
		public List<string> Loads = new List<string>();
		public List<IDefinition> Def = new List<IDefinition>();
		public LoadContext l;
		public DefinitionContext d;
		public TerminalNode EOF() { return getToken(SeagullParser.EOF, 0); }
		public List<LoadContext> load() {
			return getRuleContexts(LoadContext.class);
		}
		public LoadContext load(int i) {
			return getRuleContext(LoadContext.class,i);
		}
		public List<DefinitionContext> definition() {
			return getRuleContexts(DefinitionContext.class);
		}
		public DefinitionContext definition(int i) {
			return getRuleContext(DefinitionContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SeagullParserVisitor ) return ((SeagullParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(51);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LOAD) {
				{
				{
				setState(46);
				((ProgramContext)_localctx).l = load();
				 _localctx.Loads.Add(((ProgramContext)_localctx).l.File); 
				}
				}
				setState(53);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << PUBLIC) | (1L << PRIVATE) | (1L << NAMESPACE) | (1L << ID))) != 0)) {
				{
				{
				setState(54);
				((ProgramContext)_localctx).d = definition();
				 _localctx.Def.Add(((ProgramContext)_localctx).d.Ast); 
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(62);
			match(EOF);
			 ((ProgramContext)_localctx).Ast =  new Program(0, 0, _localctx.Loads, _localctx.Def); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LoadContext extends ParserRuleContext {
		public string File;
		public Token p;
		public TerminalNode LOAD() { return getToken(SeagullParser.LOAD, 0); }
		public TerminalNode STRING_CONSTANT() { return getToken(SeagullParser.STRING_CONSTANT, 0); }
		public LoadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_load; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).enterLoad(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).exitLoad(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SeagullParserVisitor ) return ((SeagullParserVisitor<? extends T>)visitor).visitLoad(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LoadContext load() throws RecognitionException {
		LoadContext _localctx = new LoadContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_load);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(65);
			match(LOAD);
			setState(66);
			((LoadContext)_localctx).p = match(STRING_CONSTANT);
			 ((LoadContext)_localctx).File =  (((LoadContext)_localctx).p!=null?((LoadContext)_localctx).p.getText():null); 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public IType Ast;
		public TypeContext t;
		public PrimitiveContext primitive;
		public FunctionTypeContext functionType;
		public StructTypeContext structType;
		public Token userDefined;
		public Token i;
		public Token i2;
		public PrimitiveContext primitive() {
			return getRuleContext(PrimitiveContext.class,0);
		}
		public FunctionTypeContext functionType() {
			return getRuleContext(FunctionTypeContext.class,0);
		}
		public StructTypeContext structType() {
			return getRuleContext(StructTypeContext.class,0);
		}
		public TerminalNode ID() { return getToken(SeagullParser.ID, 0); }
		public List<TerminalNode> L_BRACKET() { return getTokens(SeagullParser.L_BRACKET); }
		public TerminalNode L_BRACKET(int i) {
			return getToken(SeagullParser.L_BRACKET, i);
		}
		public List<TerminalNode> R_BRACKET() { return getTokens(SeagullParser.R_BRACKET); }
		public TerminalNode R_BRACKET(int i) {
			return getToken(SeagullParser.R_BRACKET, i);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public List<TerminalNode> INT_CONSTANT() { return getTokens(SeagullParser.INT_CONSTANT); }
		public TerminalNode INT_CONSTANT(int i) {
			return getToken(SeagullParser.INT_CONSTANT, i);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).exitType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SeagullParserVisitor ) return ((SeagullParserVisitor<? extends T>)visitor).visitType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		return type(0);
	}

	private TypeContext type(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		TypeContext _localctx = new TypeContext(_ctx, _parentState);
		TypeContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_type, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(81);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case INT:
			case CHAR:
			case DOUBLE:
			case STRING:
				{
				setState(70);
				((TypeContext)_localctx).primitive = primitive();
				 ((TypeContext)_localctx).Ast =  ((TypeContext)_localctx).primitive.Ast; 
				}
				break;
			case L_PAR:
				{
				setState(73);
				((TypeContext)_localctx).functionType = functionType();
				 ((TypeContext)_localctx).Ast =  ((TypeContext)_localctx).functionType.Ast; 
				}
				break;
			case STRUCT:
				{
				setState(76);
				((TypeContext)_localctx).structType = structType();
				 ((TypeContext)_localctx).Ast =  ((TypeContext)_localctx).structType.Ast; 
				}
				break;
			case ID:
				{
				setState(79);
				((TypeContext)_localctx).userDefined = match(ID);
				 ((TypeContext)_localctx).Ast =  DependencyManager.Instance.AddType(((TypeContext)_localctx).userDefined.GetLine(), ((TypeContext)_localctx).userDefined.GetCol(), ((TypeContext)_localctx).userDefined.GetText()); 
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(99);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new TypeContext(_parentctx, _parentState);
					_localctx.t = _prevctx;
					_localctx.t = _prevctx;
					pushNewRecursionContext(_localctx, _startState, RULE_type);
					setState(83);
					if (!(precpred(_ctx, 2))) throw new FailedPredicateException(this, "precpred(_ctx, 2)");
					setState(84);
					match(L_BRACKET);
					setState(85);
					((TypeContext)_localctx).i = match(INT_CONSTANT);
					setState(86);
					match(R_BRACKET);
					 ((TypeContext)_localctx).Ast =  ArrayType.BuildArray(int.Parse((((TypeContext)_localctx).i!=null?((TypeContext)_localctx).i.getText():null)), ((TypeContext)_localctx).t.Ast); 
					setState(94);
					_errHandler.sync(this);
					_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
					while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
						if ( _alt==1 ) {
							{
							{
							setState(88);
							match(L_BRACKET);
							setState(89);
							((TypeContext)_localctx).i2 = match(INT_CONSTANT);
							setState(90);
							match(R_BRACKET);
							 ((TypeContext)_localctx).Ast =  ArrayType.BuildArray( int.Parse((((TypeContext)_localctx).i2!=null?((TypeContext)_localctx).i2.getText():null)), _localctx.Ast); 
							}
							} 
						}
						setState(96);
						_errHandler.sync(this);
						_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
					}
					}
					} 
				}
				setState(101);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,4,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public static class FunctionTypeContext extends ParserRuleContext {
		public FunctionType Ast;
		public List<VariableDefinition> Params = new List<VariableDefinition>();
		public IType Rt;
		public ParametersContext p;
		public Token par;
		public TypeContext t;
		public VoidTypeContext vt;
		public TerminalNode L_PAR() { return getToken(SeagullParser.L_PAR, 0); }
		public TerminalNode R_PAR() { return getToken(SeagullParser.R_PAR, 0); }
		public TerminalNode ARROW() { return getToken(SeagullParser.ARROW, 0); }
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public VoidTypeContext voidType() {
			return getRuleContext(VoidTypeContext.class,0);
		}
		public FunctionTypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_functionType; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).enterFunctionType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SeagullParserListener ) ((SeagullParserListener)listener).exitFunctionType(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof SeagullParserVisitor ) return ((SeagullParserVisitor<? extends T>)visitor).visitFunctionType(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionTypeContext functionType() throws RecognitionException {
		FunctionTypeContext _localctx = new FunctionTypeContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_functionType);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(102);
			match(L_PAR);
			setState(106);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ID) {
				{
				setState(103);
				((FunctionTypeContext)_localctx).p = parameters();
				 ((FunctionTypeContext)_localctx).Params =  ((FunctionTypeContext)_localctx).p.Ast;
				}
			}
